1.10 (unreleased)
=================

- Nothing changed yet.


1.9 (2013-11-08)
================

- fix indentation level for Jinja2ProjectTemplate in scaffolds/__init__.py
  [Bruno Binet]

- Remove unnecessary dependency on ``pyramid.interfaces.ITemplateRenderer``
  which was deprecated in Pyramid 1.5.
  [mmerickel]

- #68: Added `model_path_filter`, `route_path_filter` and `static_path_filter` filters
  [Remco]

- #74: Fixed issue with route being converted as_const by jinja2 engine when using btyecode cache
  [Remco]


1.8 (2013-10-03)
================

- #70: Do not pin for py3.2 compatibility unless running under py3.2
  [dairiki]


1.7 (2013-08-07)
================

- #56: python3.3: Non-ASCII characters in changelog breaks pip installation
  [Domen Kožar]

- #57: Remove useless warning: `DeprecationWarning: reload_templates setting
  is deprecated, use pyramid.reload_templates instead.`
  [Marc Abramowitz]


1.6 (2013-01-23)
================

- Set `jinja2.i18n.domain` default to the package name
  of the pyramid application.
  [Domen Kožar]

- Add `jinja2.globals` setting to add global objects into 
  the template context
  [Eugene Fominykh]

- Add `jinja2.newstyle` setting to enable newstyle gettext calls
  [Thomas Schüßler]

1.5 (2012-11-24)
================

- Add `pyramid.reload_templates` to set `jinja2.auto_reload` instead of
  using `reload_templates`. Deprecate the latter.
  [Domen Kožar]

- Clear bytecode cache on atexit
  [Domen Kožar]

- Add support for more Jinja2 options. Note support for jinja2.autoescape is
  limited to boolean only.

  * jinja2.block_start_string
  * jinja2.block_end_string
  * jinja2.variable_start_string
  * jinja2.variable_end_string
  * jinja2.comment_start_string
  * jinja2.comment_end_string
  * jinja2.line_statement_prefix
  * jinja2.line_comment_prefix
  * jinja2.trim_blocks
  * jinja2.newline_sequence
  * jinja2.optimized
  * jinja2.cache_size
  * jinja2.autoescape

  [Michael Ryabushkin]

1.4.2 (2012-10-17)